[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ids_ml"
version = "0.1.0"
description = "A machine learning library for IDS"
authors = [
    { name = "Velasteguí Izurieta Homero Javier", email = "fresvel@outlook.com" },
    ]
readme = "README.md"
license = { file = "LICENSE.md"}


dependencies = [
    ]

project_scripts = {
    "ids_ml = ids_ml.__main__:main",
}

[tool.setuptools.package-data]
ids_ml =["assets/*"]